2002-01-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FilterParser.py (FilterParser.__buildactions): Lowercase the
	incoming action as file_to_list no longer does.

	* Util.py (file_to_list): Only lowercase the first field of a
	whitespace split line.

2002-01-31  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Add 'to/from-autocdb' and 'to/from-autodbm' to
	the 'most_sources' regular expression.

	(FilterParser.__search_file): New function to search a text file
	of email addresses with optional second field (action).

	(FilterParser.__search_cdb): New function to search a CDB database
	of email addresses with optional value (action).

	(FilterParser.firstmatch): Added support for 'to/from-autocdb'.
	Moved the guts of 'to/from-file' and 'to/from-cdb' to the two
	functions listed just above.

	* Util.py (build_cdb): New function to build a CDB file from a
	text file.

2002-01-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* HMAC.py (_strxor): Python2ism - string method ok to use now.
	
	* Util.py (gethostname): Remove Python 1.x support.

	* Defaults.py (CRYPT_KEY): Use binascii.unhexlify instead of 
	Util.unhexlify.
	
	* Cookie.py (confirmationmac): Use binascii.hexlify instead of
	Util.hexlify.
	
	(datemac): Ditto.

	(make_sender_cookie): Ditto.

	(make_keywordmac): Ditto.

	* Util.py: Remove hexlify and unhexlify functions; use the
	binascii module instead.

2002-01-30  Tim Legant  <tim@catseye.net>

	* Defaults.py: Updated PARENTDIR to support relative symlinks in
	addition to absolute symlinks.

2002-01-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Add a new variable PARENTDIR that refers to the
	TMDA parent directory.  Used internally.

	* FilterParser.py (FilterParser.firstmatch): Add from/to-ezmlm
	rules to support matching from ezmlm `subscribers' directories
	which contain hash files of list subscriber addresses.

2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
